--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
    "dev": "vite",
   "build": "vite build",
   "preview": "vite preview",
-  "start": "serve -s dist -l $PORT"
+  "start": "serve -s dist --listen 10000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
